# news-summarizer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  example.env  example.json  main.py  pyproject.toml
src/ai/: news.py
src/ai/mock/: example.json
src/ai/models/: openai.py
src/ai/provider/: base.py  openai.py
src/db/: database.py
src/db/entity/: news.py  newspaper.py
src/db/model/: base.py  category.py
src/db/repository/: base_repository.py  category_repository.py  news_repository.py  newspaper_repository.py
src/domain/: article.py  news.py  newspaper.py
src/model/: news.py  newspaper.py  newspaper_config.py
src/playwright/: newspaper.py
src/playwright/custom/: nord_bayern.py
src/scraper/custom/: nord_bayern.py  twenty_minutes.py
src/service/: ai_service.py  article_service.py  broadcast_service.py  category_service.py  newspaper_service.py  scraper_service.py
src/services/: ai_service.py  article_service.py  broadcast_service.py  category_service.py  newspaper_service.py
src/telegram/: bot.py
